2007-08-30  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Add gpgex.
	* include/config.nsi.in: Add gpgex.
	* src/Makefile.am (EXTRA_DIST): Add inst-gpgex.nsi and
	uninst-gpgex.nsi.
	(gpg4win_spkgs): Add gpgex.
	(gpg4win_pkg_gpgex_configure): New variable.
	* src/inst-sections.nsi: Add gpgex installer and uninstaller, as
	well as description.
	(CalcDefaults, CalcDepends): Add gpgex.

2007-08-30  Marcus Brinkmann  <marcus@g10code.de>

	* packages/download.sh: Implement new "name" command and remove
	"ren" command.
	* packages/packages.current: Add qt.
	* configure.ac: Add qt.
	* include/config.nsi.in: Add qt.
	* src/Makefile.am (EXTRA_DIST): Add inst-qt.nsi and uninst-qt.nsi.
	(gpg4win_bpkgs): Add qt.
	* src/uninst-qt.nsi, src/inst-qt.nsi: New files.
	* src/inst-sections.nsi: Run installer and uninstaller for qt.
	(CalcDepends): Handle qt.
	* src/gpg4win.nsi: Remove qt from light installer.

2007-08-24  Marcus Brinkmann  <marcus@g10code.de>

	* src/inst-gnupg.nsi: Write compatibility key to registry for GPGee.

2007-08-24  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Updated libassuan to 1.0.3.

2007-08-23  Werner Koch  <wk@g10code.com>

	* src/inst-dirmngr.nsi: Install examples files as default
	configuration.

2007-08-20  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Add bzip2.

	* configure.ac: Check for RANLIB and AR.  Look for bzip2.  Make
	gnupg and gnupg2 depend on it.
	* src/Makefile.am (gpg4win_pkg_bzip2_make_args) 
	(gpg4win_pkg_bzip2_make_args_inst): New.
	(EXTRA_DIST): Add bzip2.
	(gpg4win_pkg_gnupg_configure): New.  Look for bzip2.
	* include/config.nsi.in: Add bzip2.
	* src/inst-bzip2.nsi: New.
	* src/uninst-bzip2.nsi: New.

2007-08-16  Werner Koch  <wk@g10code.com>

	Released 1.1.2.

	* src/inst-gnupg2.nsi: Allow overwriting of gpg-agent.
	* src/inst-libgpg-error.nsi: Allow overwriting of libgpg-error.dll.
	* src/inst-libgcrypt.nsi: Likewise.
	* src/inst-gpgme.nsi: Likewise.
	* src/inst-w32pth.nsi: Likewise.